[macos_aarch64] assert(cpu_has("hw.optional.arm.FEAT_AES")) failed after JDK-8297092

XMLWordPrintable

    • 21
    • b06
    • aarch64
    • os_x

      [2023-01-17T02:23:42,276Z] Error getting java.specification.version for /System/Volumes/Data/mesos/work_dir/jib-master/install/jdk-21+6-316/macosx-aarch64-debug.jdk/jdk-21/fastdebug: exit code 134
      [2023-01-17T02:23:42,276Z] # To suppress the following error report, specify this argument
      [2023-01-17T02:23:42,276Z] # after -XX: or in .hotspotrc: SuppressErrorAt=/vm_version_bsd_aarch64.cpp:75
      [2023-01-17T02:23:42,277Z] #
      [2023-01-17T02:23:42,277Z] # A fatal error has been detected by the Java Runtime Environment:
      [2023-01-17T02:23:42,277Z] #
      [2023-01-17T02:23:42,277Z] # Internal Error (/System/Volumes/Data/mesos/work_dir/slaves/91e16c40-06d4-468a-9fc3-7198a5bb7d5a-S82745/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/2e52dd00-5922-4a1e-8f2a-b7c3aa1b783b/runs/2c5f2fc1-fee9-422c-8983-6143a4bd8635/workspace/open/src/hotspot/os_cpu/bsd_aarch64/vm_version_bsd_aarch64.cpp:75), pid=79523, tid=9987
      [2023-01-17T02:23:42,277Z] # assert(cpu_has("hw.optional.arm.FEAT_AES")) failed: should be
      [2023-01-17T02:23:42,277Z] #
      [2023-01-17T02:23:42,277Z] # JRE version: (21.0+6) (fastdebug build )
      [2023-01-17T02:23:42,277Z] # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 21-ea+6-LTS-316, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, bsd-aarch64)
      [2023-01-17T02:23:42,277Z] # Core dump will be written. Default location: core.79523
      [2023-01-17T02:23:42,277Z] #
      [2023-01-17T02:23:42,277Z] # An error report file with more information is saved as:
      [2023-01-17T02:23:42,277Z] # /System/Volumes/Data/mesos/work_dir/jib-master/install/jdk-21+6-316/src.full/open/hs_err_pid79523.log

            Assignee:
            Hao Sun
            Reporter:
            David Holmes
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: